--- a/src/components/GlitchText.css
+++ b/src/components/GlitchText.css
@@ -19,13 +19,14 @@
 .glitch::before {
   text-shadow: 2px 0 red;
   clip: rect(0, 900px, 0, 0);
-  animation: glitchTop 1s infinite;
+  animation: glitchTop 3s infinite;
 }
 
 .glitch::after {
   text-shadow: -2px 0 blue;
   clip: rect(0, 900px, 0, 0);
-  animation: glitchBottom 1s infinite;
+  animation: glitchBottom 6s infinite;
+  opacity: 0.6;
 }
 
 @keyframes glitch {
@@ -50,43 +51,19 @@
 }
 
 @keyframes glitchTop {
-  0% {
+  0%, 80% {
     clip: rect(0, 900px, 0, 0);
   }
   20% {
     clip: rect(0, 900px, 85px, 0);
-  }
-  40% {
-    clip: rect(0, 900px, 0, 0);
-  }
-  60% {
-    clip: rect(0, 900px, 85px, 0);
-  }
-  80% {
-    clip: rect(0, 900px, 0, 0);
-  }
-  100% {
-    clip: rect(0, 900px, 0, 0);
   }
 }
 
 @keyframes glitchBottom {
-  0% {
+  0%, 95% {
     clip: rect(0, 900px, 0, 0);
   }
-  20% {
+  5% {
     clip: rect(85px, 900px, 170px, 0);
-  }
-  40% {
-    clip: rect(0, 900px, 0, 0);
-  }
-  60% {
-    clip: rect(85px, 900px, 170px, 0);
-  }
-  80% {
-    clip: rect(0, 900px, 0, 0);
-  }
-  100% {
-    clip: rect(0, 900px, 0, 0);
   }
 }
